# MachineLearningUdM

./: .gitignore  README.md  main.py  pyproject.toml
01-intro/: 01-what-is-ml.md  02-ml-vs-rules.md  03-supervised-ml.md  04-crisp-dm.md  05-model-selection.md  06-environment.md  README.md
02-regression/: notebook.ipynb
02-setup/: 02-python-environment-setup.md
03-tracking/notebooks/: 00_data_preparation.ipynb  01_first_steps_without_tracking.ipynb  02_experiment_tracking_intro.ipynb
03-tracking/scenarios/: scenario-1.ipynb
04-orchestration/: duration-prediction.py
04-orchestration/Prefect-pipelines/: README.md  config.yaml  duration_prediction_prefect.py
04-orchestration/prefect-with-yml/: README.md  taxi_pipeline_yaml_config.py
05-dockers/: GUIA_INSTALACION_DOCKER.md  docker-comandos-basicos.md
05-dockers/practica-gatitos/: Dockerfile  README.md  app.py  app_docker.py
05-dockers/practica-gatitos/templates/: index.html  index_docker.html
06-deployment/deploy/batch-deploy/: .env  README.md  main.py  pyproject.toml
