[project]
name = "machine-learning-udm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mlflow>=3.2.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "prefect>=3.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
